--- a/index.html
+++ b/index.html
@@ -45,8 +45,12 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Shiloh Huntsberry</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
+          <a
+            href="https://enchanting-lollipop-0ceb6a.netlify.app"
+            target="_blank"
+            >Shiloh Huntsberry</a
+          >
+          and is <a href="#" target="_blank"> on GitHub</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
