--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
         <p>
           This project was coded by
           <a
-            href="https://enchanting-lollipop-0ceb6a.netlify.app"
+            href=https://github.com/HuntsberryS
             target="_blank"
             >Shiloh Huntsberry</a
           >
-          and is <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          and is <a href="https://github.com/HuntsberryS/Project" target="_blank"> on GitHub</a> and
+          <a href="https://enchanting-lollipop-0ceb6a.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
